--- a/samples/application-sample/application-sample.vcxproj
+++ b/samples/application-sample/application-sample.vcxproj
@@ -156,10 +156,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="application.hpp" />
+    <ClInclude Include="imgui_impl_win32.hpp" />
     <ClInclude Include="noncopyable.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="application.cpp" />
+    <ClCompile Include="imgui_impl_win32.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
