--- a/directx12-wrapper.vcxproj
+++ b/directx12-wrapper.vcxproj
@@ -36,6 +36,7 @@
     <ClInclude Include="pipelines\input_assembly_info.hpp" />
     <ClInclude Include="pipelines\pipeline_state.hpp" />
     <ClInclude Include="pipelines\rasterization_info.hpp" />
+    <ClInclude Include="raytracings\accleration.hpp" />
     <ClInclude Include="resources\buffer.hpp" />
     <ClInclude Include="resources\resource.hpp" />
     <ClInclude Include="resources\texture2d.hpp" />
@@ -58,6 +59,7 @@
     <ClCompile Include="pipelines\input_assembly_info.cpp" />
     <ClCompile Include="pipelines\pipeline_state.cpp" />
     <ClCompile Include="pipelines\rasterization_info.cpp" />
+    <ClCompile Include="raytracings\accleration.cpp" />
     <ClCompile Include="resources\buffer.cpp" />
     <ClCompile Include="resources\resource.cpp" />
     <ClCompile Include="resources\texture2d.cpp" />
