--- a/directx12-wrapper.vcxproj.filters
+++ b/directx12-wrapper.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClInclude Include="raytracings\shader_table.hpp">
       <Filter>raytracings</Filter>
     </ClInclude>
+    <ClInclude Include="raytracings\pipeline.hpp">
+      <Filter>raytracings</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="utilities.cpp" />
@@ -171,6 +174,9 @@
       <Filter>shaders</Filter>
     </ClCompile>
     <ClCompile Include="raytracings\shader_table.cpp">
+      <Filter>raytracings</Filter>
+    </ClCompile>
+    <ClCompile Include="raytracings\pipeline.cpp">
       <Filter>raytracings</Filter>
     </ClCompile>
   </ItemGroup>
