--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -14,10 +14,16 @@ env:
 jobs:
   build:
     runs-on: windows-latest
-
     steps:
     - uses: actions/checkout@v2
-
+    
+    - name: run-vcpkg
+    - uses: lukka/run-vcpkg@v6.0
+      with: 
+        setupOnly: true
+    - run: |
+        $VCPKG_ROOT/vcpkg install spdlog:x64-windows
+      
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1
 
