--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -12,11 +12,9 @@ env:
   BUILD_CONFIGURATION: Release
 
 jobs:
-  build:
+  set_up:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v2
-    
     - name: run-vcpkg
     - uses: lukka/run-vcpkg@v6.0
       with: 
@@ -25,6 +23,11 @@ jobs:
         $VCPKG_ROOT/vcpkg install spdlog:x64-windows
       shell: bash
       
+  build:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v2
+    
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1
 
