--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -21,9 +21,9 @@ jobs:
     - uses: lukka/run-vcpkg@v6.0
       with: 
         setupOnly: true
+        
     - name: install pkg
-      run: |
-        $VCPKG_ROOT/vcpkg install spdlog:x64-windows
+      run: $VCPKG_ROOT/vcpkg install spdlog:x64-windows
       shell: bash
     
     - name: Add MSBuild to PATH
